修复多方块结构的一些bug
Signed-off-by: gchdljsygch <47450941+gchdljsygch@users.noreply.github.com>