@@ -23,14 +23,13 @@ import net.minecraft.resources.ResourceLocation;
 import javax.annotation.Nullable;
 import javax.annotation.ParametersAreNonnullByDefault;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * JEI category for ordinary MBD recipes of a single recipe type.
  */
 @MethodsReturnNonnullByDefault
 @ParametersAreNonnullByDefault
-public class MBDRecipeTypeCategory extends ModularUIRecipeCategory<MBDRecipeTypeCategory.RecipeWrapper> {
+public class MBDRecipeTypeCategory extends ModularUIRecipeCategory<MBDRecipe> {
     /**
      * JEI wrapper that exposes an MBD modular recipe UI.
      */
@@ -44,7 +43,10 @@ public class MBDRecipeTypeCategory extends ModularUIRecipeCategory<MBDRecipeType
         }
     }
 
-    public static final Function<MBDRecipeType, RecipeType<RecipeWrapper>> TYPES = Util.memoize(recipeMap -> new RecipeType<>(recipeMap.getRegistryName(), RecipeWrapper.class));
+    /**
+     * JEI-facing recipe types use the raw {@link MBDRecipe}; the category supplies wrappers internally for rendering.
+     */
+    public static final Function<MBDRecipeType, RecipeType<MBDRecipe>> TYPES = Util.memoize(recipeMap -> new RecipeType<>(recipeMap.getRegistryName(), MBDRecipe.class));
 
     private final MBDRecipeType recipeType;
     @Getter
@@ -53,6 +55,7 @@ public class MBDRecipeTypeCategory extends ModularUIRecipeCategory<MBDRecipeType
     private final IDrawable icon;
 
     public MBDRecipeTypeCategory(IJeiHelpers helpers, MBDRecipeType recipeType) {
+        super(RecipeWrapper::new);
         this.recipeType = recipeType;
         IGuiHelper guiHelper = helpers.getGuiHelper();
         var size = recipeType.getUiSize();
@@ -61,7 +64,7 @@ public class MBDRecipeTypeCategory extends ModularUIRecipeCategory<MBDRecipeType
     }
 
     @Override
-    public RecipeType<RecipeWrapper> getRecipeType() {
+    public RecipeType<MBDRecipe> getRecipeType() {
         return TYPES.apply(recipeType);
     }
 
@@ -77,8 +80,7 @@ public class MBDRecipeTypeCategory extends ModularUIRecipeCategory<MBDRecipeType
                         Minecraft.getInstance().getConnection().getRecipeManager().getAllRecipesFor(recipeType)
                                 .stream()
                                 .filter(recipe -> !recipe.isFuel && !recipe.isXEIHidden)
-                                .map(RecipeWrapper::new)
-                                .collect(Collectors.toList()));
+                                .toList());
             }
         }
     }
@@ -97,7 +99,7 @@ public class MBDRecipeTypeCategory extends ModularUIRecipeCategory<MBDRecipeType
     }
 
     @Override
-    public @Nullable ResourceLocation getRegistryName(RecipeWrapper wrapper) {
-        return wrapper.recipe.id;
+    public @Nullable ResourceLocation getRegistryName(MBDRecipe recipe) {
+        return recipe.id;
     }
 }
